# ercot-clustering

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
python/: pyproject.toml
python/src/: __init__.py
python/src/clustering/: correlation.py  subcluster.py
python/src/data/: cleaner.py  loader.py
python/src/visualization/: scatter_map.py
python/tests/: test_correlation.py
src/: App.tsx  index.css
src/components/inputs/: ConfigPanel.tsx  FileUpload.tsx
src/components/outputs/: ClusterMap.tsx  ClusterStats.tsx  ProgressBar.tsx
src/core/: clustering.ts  correlation.ts  csvParser.ts  types.ts
src/ercot_clustering/: app.py  cli.py  config.py  pipeline.py
src/ercot_clustering/clustering/: __init__.py  hierarchical.py
src/ercot_clustering/visualization/: __init__.py  dendrogram.py
src/hooks/: useClustering.ts
src/workers/: clustering.worker.ts
tests/: setup.ts  test_cleaner.py  test_clustering.py
tests/unit/: clustering.test.ts  correlation.test.ts
