[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ercot-clustering"
version = "0.1.0"
description = "Hierarchical clustering of ERCOT nodal electricity prices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.32",
    "plotly>=5.18",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
ercot-cluster = "ercot_clustering.cli:main"
ercot-cluster-ui = "ercot_clustering.app:launch"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.pytest.ini_options]
testpaths = ["tests"]
